adjusting table and values

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         <tr>
             <th>Zone</th>
             <th>Start Time</th>
-            <th>Duration</th>
+            <th>Duration in minutes</th>
             <th>Frequency</th>
         </tr>
-    <table>    
+    <h2>Update Table</h2>    
+    <table class = "table table-bordered table-striped" id ="update_table"></table>>    
         <tr> 
             <th><select id="number">
                     <option value="1">1</option>
