--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <th>Frequency</th>
         </tr>
     <h2>Update Table</h2>    
-    <table class = "table table-bordered table-striped" id ="update_table"></table>>    
+    <table class = "table table-bordered table-striped" id ="update_table">   
         <tr> 
             <th><select id="number">
                     <option value="1">1</option>
