adjusting table and values

--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
             <th>Duration in minutes</th>
             <th>Frequency</th>
         </tr>
-    <h2>Update Table</h2>    
-    <table class = "table table-bordered table-striped" id ="update_table">   
+     
+    <table class = "table table-bordered table-striped" id ="update_table">
+        <h2>Update Table</h2>   
+        <tr>
+                <th>Zone</th>
+                <th>Start Time</th>
+                <th>Duration in minutes</th>
+                <th>Frequency</th>
+        </tr>   
         <tr> 
             <th><select id="number">
                     <option value="1">1</option>
