--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
     <script src="index.js" type="text/javascript"></script>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,7 +32,7 @@
     }
 </style>
 
-<body>
+<body style = "background:url(https://photos.app.goo.gl/PDxqXCaBVVpsGen47)">
     <h1>Irrigation Cycles</h1>
     <table class = "table table-bordered table-striped" id ="schedule_table">
         <tr>
@@ -44,7 +43,7 @@
         </tr>
      
     <table class = "table table-bordered table-striped" id ="update_table">
-        <h2>Update Table</h2>   
+        <h2>Update Schedule</h2>   
         <tr>
                 <th>Zone</th>
                 <th>Start Time</th>
