--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 </style>
 
-<body style = "background:url(https://photos.app.goo.gl/PDxqXCaBVVpsGen47)">
+<body background="background.jpg">
     <h1>Irrigation Cycles</h1>
     <table class = "table table-bordered table-striped" id ="schedule_table">
         <tr>
