--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     }
 </style>
 
-<body background="background.jpg">
+<body background="background.jpg" opacity=0.2>
     <h1>Irrigation Cycles</h1>
-    <table class = "table table-bordered table-striped" id ="schedule_table">
+    <table class = "table table-striped table-dark table-hover" id ="schedule_table">
         <tr>
             <th>Zone</th>
             <th>Start Time</th>
@@ -42,7 +42,7 @@
             <th>Frequency</th>
         </tr>
      
-    <table class = "table table-bordered table-striped" id ="update_table">
+    <table class = "table table-dark" id ="update_table">
         <h2>Update Schedule</h2>   
         <tr>
                 <th>Zone</th>
@@ -181,13 +181,14 @@
 <script>
 $(document).ready(function(){
     $.getJSON("schedule.json", function(data) {
-        var zone_data = '';
+        var zone_data = '<tbody>';
         $.each(data, function(key, value) {
             zone_data += '<tr>';
             zone_data += '<td>' +value.zone + '</td>';
             zone_data += '<td>' +value.start_hour +':'+value.start_minute + '</td>';
             zone_data += '<td>' +value.duration + '</td>';
-            zone_data += '<td>' +value.frequency + '</td>';    
+            zone_data += '<td>' +value.frequency + '</td>';
+        zone_data += '</tbody>'    
         });
         $('#schedule_table').append(zone_data);
     });
