--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     }
 </style>
 
-<body background="background.jpg" opacity=0.2>
+<body>
     <h1>Irrigation Cycles</h1>
-    <table class = "table table-striped table-dark table-hover" id ="schedule_table">
+    <table class = "table table-striped table-hover table-dark" id ="schedule_table">
         <tr>
             <th>Zone</th>
             <th>Start Time</th>
@@ -42,7 +42,7 @@
             <th>Frequency</th>
         </tr>
      
-    <table class = "table table-dark" id ="update_table">
+    <table class = "table table-striped table-hover table-dark" id ="update_table">
         <h2>Update Schedule</h2>   
         <tr>
                 <th>Zone</th>
