--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 </style>
 
-<body>
+<body background="background.jpg">
     <h1>Irrigation Cycles</h1>
     <table class = "table table-striped table-hover table-dark" id ="schedule_table">
         <tr>
