--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
     <h1>Irrigation Cycles</h1>
-    <table class = "table table bordered table-striped table-hover table-dark" id ="schedule_table">
+    <table class = "table table-bordered table-striped table-hover table-dark" id ="schedule_table">
         <tr>
             <th>Zone</th>
             <th>Start Time</th>
